[package]
name = "tictactoe"
version = "0.1.0"
authors = ["paul <paul.bares@eradahcapital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
open_ttt_lib = "0.2.0"
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive"] }